[tool.poetry]
name = "student-assignment1"
version = "0.1.0"
description = ""
authors = ["Abdullah  <72508253+abdullah2221@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
requests = "^2.31.0"
types-requests = "^2.31.0.20240311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
